syntax = "proto3";
option csharp_namespace = "Elsa.Workflows.Runtime.ProtoActor.ProtoBuf";
package Elsa.Workflows.Runtime.ProtoActor.ProtoBuf;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

// Shared.
message ProtoJson {
  string text = 1;
}

message ProtoInput {
  map<string, ProtoJson> Data = 1;
}

message ProtoProperties {
  map<string, ProtoJson> Data = 1;
}

message ProtoExceptionState {
  string Type = 1;
  string Message = 2;
  optional string StackTrace = 3;
  optional ProtoExceptionState InnerException = 4;
}